@@ -1,3 +1,8 @@
+2013-01-18  Christopher Faylor  <me.cygwin2013@cgf.cx>
+
+	* mmap.cc (handler_disk_file::msync): Add call to FlushFileBuffers
+	to implement MS_SYNC.
+
 2013-01-17  Christopher Faylor  <me.cygwin2013@cgf.cx>
 
 	* mmap.cc (handler_disk_file::msync): Retry up to 99 times if
